--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "dev:frontend": "npm run dev --workspace=frontend",
     "dev:backend": "npm run dev --workspace=backend"
   },
-  "devDependencies": {}
+  "dependencies": {
+    "pinia": "^3.0.4",
+    "router": "^2.2.0",
+    "vite": "^6.4.1",
+    "vue": "^3.5.25"
+  }
 }
