--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node --trace-warnings dist/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write \"src/**/*.ts\"",
@@ -17,7 +17,7 @@
     "db:studio": "drizzle-kit studio",
     "open-api:generate": "npm run build && node dist/index --api-client-and-exit",
     "api-client:generate": "npm run open-api:generate && openapi --useOptions --useUnionTypes --input ./api.json --output ./.api-client --name ApiClient",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "imports": {
     "#modules/*": "./src/modules/*",
@@ -63,7 +63,8 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "tsyringe": "^4.10.0",
-    "uuid": "^13.0.0",
+    "uuid": "^8.3.2",
+    "vitest": "^4.0.16",
     "winston": "^3.18.3"
   }
 }
