--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
     "vue-i18n": "^11.1.7",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "api-client": "../backend/.api-client"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
